--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     },
     "devDependencies": {
         "terser": "^5.39.0",
-        "vite": "^6.3.1"
+        "vite": "^6.3.1",
+        "vite-tsconfig-paths": "^6.0.5"
     },
     "dependencies": {
         "phaser": "^3.90.0"
