--- a/package.json
+++ b/package.json
@@ -1,31 +1,44 @@
 {
-    "name": "template-vite",
-    "description": "A Phaser 3 template using Vite.",
-    "version": "1.4.0",
-    "type": "module",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/phaserjs/template-vite.git"
-    },
-    "author": "Phaser Studio <support@phaser.io> (https://phaser.io/)",
-    "license": "MIT",
-    "licenseUrl": "http://www.opensource.org/licenses/mit-license.php",
-    "bugs": {
-        "url": "https://github.com/phaserjs/template-vite/issues"
-    },
-    "homepage": "https://github.com/phaserjs/template-vite#readme",
-    "scripts": {
-        "dev": "node log.js dev & vite --config vite/config.dev.mjs",
-        "build": "node log.js build & vite build --config vite/config.prod.mjs",
-        "dev-nolog": "vite --config vite/config.dev.mjs",
-        "build-nolog": "vite build --config vite/config.prod.mjs"
-    },
-    "devDependencies": {
-        "terser": "^5.39.0",
-        "vite": "^6.3.1",
-        "vite-tsconfig-paths": "^6.0.5"
-    },
-    "dependencies": {
-        "phaser": "^3.90.0"
-    }
+  "name": "template-vite",
+  "description": "A Phaser 3 template using Vite.",
+  "version": "1.4.0",
+  "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/phaserjs/template-vite.git"
+  },
+  "author": "Phaser Studio <support@phaser.io> (https://phaser.io/)",
+  "license": "MIT",
+  "licenseUrl": "http://www.opensource.org/licenses/mit-license.php",
+  "bugs": {
+    "url": "https://github.com/phaserjs/template-vite/issues"
+  },
+  "homepage": "https://github.com/phaserjs/template-vite#readme",
+  "scripts": {
+    "dev": "node log.ts dev & vite --config vite/config.dev.mjs",
+    "build": "node log.ts build & vite build --config vite/config.prod.mjs",
+    "dev-nolog": "vite --config vite/config.dev.mjs",
+    "build-nolog": "vite build --config vite/config.prod.mjs",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "lint:warn": "eslint . --ext .ts --max-warnings 0"
+  },
+  "devDependencies": {
+    "@types/node": "^25.2.1",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.5",
+    "prettier": "^3.8.1",
+    "terser": "^5.39.0",
+    "vite": "^6.3.1",
+    "vite-tsconfig-paths": "^6.0.5"
+  },
+  "dependencies": {
+    "phaser": "^3.90.0",
+    "typescript-eslint": "^8.54.0"
+  }
 }
