--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "vite-tsconfig-paths": "^6.0.5"
   },
   "dependencies": {
+    "immer": "^11.1.3",
     "phaser": "^3.90.0",
     "typescript-eslint": "^8.54.0"
   }
