--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "lint:warn": "eslint . --ext .ts --max-warnings 0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "^25.2.1",
     "@typescript-eslint/eslint-plugin": "^8.54.0",
     "@typescript-eslint/parser": "^8.54.0",
@@ -32,8 +34,11 @@
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.5",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "prettier": "^3.8.1",
     "terser": "^5.39.0",
+    "ts-jest": "^29.4.6",
     "vite": "^6.3.1",
     "vite-tsconfig-paths": "^6.0.5"
   },
