--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "outDir": "./dist",
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "types": ["jest", "node"]
   },
   "include": ["src/**/*", "vite-env.d.ts", "log.ts"],
   "exclude": ["node_modules", "dist"]
